--- a/app/views/heroes/index.html.slim
+++ b/app/views/heroes/index.html.slim
@@ -1,3 +1,2 @@
-h1= RubyCommitters.site_name
-
-ul== partial 'heroes/hero', :collection => @heroes
+table#list
+  == partial 'heroes/hero', :collection => @heroes
