Fix SASS deprecation warning.

--- a/app/stylesheets/base.sass
+++ b/app/stylesheets/base.sass
@@ -4,12 +4,12 @@
   variables
 // --------------------
 
-$primary-colour   = #b01000
-$secondary-colour = #392a2a
-$highlight-colour = #b01000
-$shadow-colour    = #ece0d0
-$bg-header-colour = #ffeed4
-$bg-main-colour   = #fffdf8
+$primary-colour:   #b01000
+$secondary-colour: #392a2a
+$highlight-colour: #b01000
+$shadow-colour:    #ece0d0
+$bg-header-colour: #ffeed4
+$bg-main-colour:   #fffdf8
 
 // --------------------
   elements
