--- a/app/views/accounts/_portrait.html.erb
+++ b/app/views/accounts/_portrait.html.erb
@@ -1,3 +1,5 @@
 <div class='image-wrapper'>
-  <%= image_tag portrait.url %>
+  <div class="frame">
+    <%= image_tag portrait.url %>
+  </div>
 </div>
