--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,5 +1,10 @@
-<h1>Ruby Committers</h1>
-<%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
-<ul>
+<div id="heading">
+  <h1>Ruby Committers</h1>
+  <%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
+</div>
+<ul class="accounts">
 <%= render :partial => 'account', :collection => @accounts %>
 </ul>
+<div id="footer">
+
+</div>
