--- a/app/views/accounts/_name.html.erb
+++ b/app/views/accounts/_name.html.erb
@@ -1,3 +1,3 @@
-<%- content_tag :li, :class => is_nickname ? 'nickname' : '' do %>
+<%= content_tag :li, :class => is_nickname ? 'nickname' : '' do %>
   <%= is_nickname ? formatted_nickname(name.value) : name.value %>
 <%- end %>
