--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -41,7 +41,8 @@ blockquote, q {
 a {
   color: #999999;
   text-decoration: none;
-  -webkit-transition: color 500ms ease;
+  -webkit-transition: color 0.5s ease;
+  -moz-transition: color 0.5s ease;
 }
 
 a:hover {
@@ -49,10 +50,8 @@ a:hover {
   cursor: pointer;
 }
 
-.button {
-  -webkit-box-shadow: 0px 1px white;
-}
 .etched {
+  box-shadow: inset 0px 1px rgba(0, 0, 0, 0.1), 0px 1px rgba(255, 255, 255, 0.2);
   -webkit-box-shadow: inset 0px 1px rgba(0, 0, 0, 0.1), 0px 1px rgba(255, 255, 255, 0.2);
 }
 
@@ -70,6 +69,7 @@ body {
   font-weight: bold;
   text-align: center;
   background: -webkit-gradient(linear, left top, left bottom, from(#CE0002), to(#730C05), color-stop(0.5, #E9190C));
+  background: -moz-linear-gradient(top, #CE0002, #E9190C, #730C05);
   color: white;
   padding: 10px;
   position: fixed;
@@ -86,18 +86,21 @@ body {
 
 #forkMeOnGithub {
   -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
   text-align: center;
   position: fixed;
   bottom: 60px;
   right: -45px;
   z-index: 1;
-  -webkit-box-shadow: 0px 1px 3px black;
+  box-shadow: 0px 15px 15px black;
+  -webkit-box-shadow: 0px 15px 15px black;
 }
 
 #forkMeOnGithub a{
   color: white;
   padding: 10px 50px 10px 50px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#339900), to(#003300));
+  background: -webkit-gradient(linear, left top, left bottom, from(#009900), to(#003300));
+  background: -moz-linear-gradient(top, #009900, #003300);
 }
 
 #accounts li.account {
@@ -108,19 +111,21 @@ body {
   border: 3px solid rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   vertical-align: top;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.8);
   color: white;
-  -webkit-transition: background 500ms ease;
+  -webkit-transition: background 0.5s ease;
+  -moz-transition: background 0.5s ease;
 }
 
 #accounts li.account:hover {
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
 }
 
 .account .name {
   padding: 5px;
   text-align: center;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.0)), to(rgba(0, 0, 0, 0.6)), color-stop(0.3, rgba(0, 0, 0, 0.0)));
+  background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.6));
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
@@ -146,14 +151,14 @@ body {
   font-size: 10pt;
 }
 
-.portrait {
-  width: 80px;
+.portraits {
   float: left;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 }
 
 img.portrait {
+  width: 80px;
   padding: 8px;
 }
 
@@ -170,7 +175,8 @@ img.portrait {
   margin-right: 5px;
   padding: 5px;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  -webkit-transition: color 500ms ease;
+  -webkit-transition: color 0.5s ease;
+  -moz-transition: color 0.5s ease;
   border-radius: 4px;
 }
 
@@ -199,7 +205,8 @@ img.portrait {
   height: 32px;
   width: 32px;
   opacity: 0.3;
-  -webkit-transition: opacity 500ms ease
+  -webkit-transition: opacity 0.5s ease;
+  -moz-transition: opacity 0.5s ease;
 }
 
 .services img:hover{
