--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,54 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Ruby Committers</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-  <%= analytics_tag %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head>
+    <title>Ruby Committers</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <%= stylesheet_link_tag :all %>
+    <script src='/javascripts/cufon-yui.js' type='text/javascript'></script>
+    <script src='/javascripts/League_Gothic_400.font.js' type='text/javascript'></script>
+    <script src='/javascripts/Baskerville_400.font.js'   type='text/javascript'></script>
+    <script type="text/javascript">
+      Cufon.replace(".headline h1", { fontFamily: 'League Gothic' });
+      Cufon.replace(".tagline h2", { fontFamily: 'Baskerville' });
+    </script>
+    <%= javascript_include_tag :defaults %>
+    <%= csrf_meta_tag %>
+    <%= analytics_tag %>
+  </head>
+  <body>
+    <div id='header'>
+      <a href="http://github.com/tenderlove/rubycommitters.org">
+      <img style="position: absolute; top: 0; right: 0; border: 0;"
+    src="https://assets2.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_red_aa0000.png&path=" alt="Fork me onGitHub"></a>
+      <div class='shell'>
+        <div class='cl'>&nbsp;</div>
+        <div id='navigation'>
+          <ul>
+            <li><a href='http://www.ruby-lang.org'>Visit the official Ruby website</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div id='main'>
+      <div class='shell'>
+        <div class='headline'>
+          <h1>The Ruby Core Team</h1>
+        </div>
+        <div class='tagline'>
+          <h2>Meet the men & women of the Ruby programming language.</h2>
+        </div>
+        <%= yield %>
+      </div>
+    </div>
+    <div id='footer'>
+      <div class='shell'>
+        <p>Copyright © <%= Time.now.year %> RubyCommitters.org | Website designed by <a href='http://mattsears.com'>Matt Sears</a></p>
+      </div>
+    </div>
+    <script type='text/javascript'>
+      //<![CDATA[
+        // Cufon.now();
+      //]]>
+    </script>
+  </body>
 </html>
